--- a/Dz-3/№1.html
+++ b/Dz-3/№1.html
@@ -2,7 +2,7 @@
 <script>
 
 function isPrime(n) {
-    for(var i=2;i<n-1;i++){
+    for(var i=2;i<Math.sqrt(n)+1;i++){
         if(n%i==0){
             return false;
         }
@@ -17,5 +17,5 @@ function primesInInterval(from,to) {
         }
     }
 }
-primesInInterval(5,37);
+primesInInterval(1,100);
 </script>
