--- a/Dz-3/№4.html
+++ b/Dz-3/№4.html
@@ -1,10 +1,9 @@
 <meta charset="utf-8">
 <script>
-
-for(var i =1; i<=21; i++){
-    for(var k=0;k<i;k++){
-        console.log("x");
+    var string = ["x"];
+    for (var i = 0; i < 20; i++) {
+        console.log(string.join(""));
+        string.push("x");
     }
-}
 
 </script>
