--- a/Dz-3/№2.html
+++ b/Dz-3/№2.html
@@ -1,5 +1,15 @@
 <meta charset="utf-8">
 <script>
-
+    var i = 0;
+    do {
+        if (i == 0) {
+            document.write("<p>0 - это ноль</p>");
+        } else if (i % 2 == 0) {
+            document.write("<p>" + i + " - четное число</p>");
+        } else {
+            document.write("<p>" + i + " - нечетное число</p>");
+        }
+        i++;
+    } while (i <= 10);
 
 </script>
