--- a/Dz-3/№1.html
+++ b/Dz-3/№1.html
@@ -22,7 +22,7 @@
     }
     var timerStart, timerStop;
     timerStart = Date.now();
-    primesInInterval(-5, 1000000);
+    primesInInterval(-50, 1000);
     timerStop = Date.now();
     console.log("время работы: " + (timerStop - timerStart) + "ms");
 
