--- a/Dz-4/Bulls&Cows.html
+++ b/Dz-4/Bulls&Cows.html
@@ -25,7 +25,6 @@
 
 
     function guess(guessedNumber, gameNumber) {
-        var bulls, cows;
         bulls = 0;
         cows = 0;
         for (var i = 0; i < gameNumber.length; i++) { //подсчет быков
@@ -39,8 +38,6 @@
                 cows++;
             }
         }
-
-        return [bulls, cows];
     }
 
 
@@ -49,16 +46,17 @@
     var digits = 4;
     var guessedNumber;
     var gameNumber = generateNumber();
-    var bulls, cows;
-    var attemps=0;
+    var bulls,
+        cows,
+        attemps = 0;
     console.log(gameNumber);
     do {
         guessedNumber = prompt("Введите предполагаемое число:").split("");
-        bulls = guess(guessedNumber, gameNumber)[0];
-        cows = guess(guessedNumber, gameNumber)[1];
+        guess(guessedNumber, gameNumber);
         alert("Быков: " + bulls + ", Коров: " + cows);
         attemps++;
     }
     while (bulls != digits);
-    alert("Победа! Вы отгадали число за "+attemps+" попыток.");
+    alert("Победа! Вы отгадали число за " + attemps + " попыток.");
+
 </script>
