--- a/Dz-5/chess.html
+++ b/Dz-5/chess.html
@@ -2,13 +2,16 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Chess</title>
+	<meta charset="UTF-8">
+	<title>Chess</title>
+	<link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
-    <script src="js/main.js"></script>
-    <!--    тут должно быть 64 div-->
+	<div class="board">
+	<!--    тут должно быть 64 div-->
+	</div>
 </body>
-
+<script src="js/main.js"></script>
 </html>
