--- a/Dz-6/Slider/index.html
+++ b/Dz-6/Slider/index.html
@@ -17,8 +17,8 @@
 			<img id="img3" src="img/3.jpg" alt="">
 		</div>
 		<div class="buttons">
-			<button class="prev">Prev</button>
-			<button class="next">Next</button>
+			<button class="prev">&larr;Prev</button>
+			<button class="next">Next&rarr;</button>
 		</div>
 	</div>
 </body>
