preview click slide change added

--- a/Dz-6/Slider/index.html
+++ b/Dz-6/Slider/index.html
@@ -2,25 +2,28 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Slider</title>
-	<link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Slider</title>
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-	<div class="slider-container">
-		<div class="slider">
-			<img id="img1" class="active" src="img/1.jpg" alt="">
-			<img id="img2" src="img/2.jpg" alt="">
-			<img id="img3" src="img/3.jpg" alt="">
-		</div>
-		<div class="buttons">
-			<button class="prev">&larr;Prev</button>
-			<button class="next">Next&rarr;</button>
-		</div>
-	</div>
+    <div class="slider-container">
+        <div class="slider">
+            <img class="img1 active" src="img/1.jpg" alt="">
+            <img class="img2" src="img/2.jpg" alt="">
+            <img class="img3" src="img/3.jpg" alt="">
+        </div>
+        <div class="buttons">
+            <button class="prev">&larr;Prev</button>
+            <img class="img1 active" src="img/1.jpg" alt="">
+            <img class="img2" src="img/2.jpg" alt="">
+            <img class="img3" src="img/3.jpg" alt="">
+            <button class="next">Next&rarr;</button>
+        </div>
+    </div>
 </body>
 <script src="js/main.js"></script>
 
