restructured html, rewrited css and js

--- a/Dz-6/Slider/index.html
+++ b/Dz-6/Slider/index.html
@@ -10,18 +10,22 @@
 </head>
 
 <body>
-    <div class="slider-container">
-        <div class="slider">
-            <img class="img1 active" src="img/1.jpg" alt="">
-            <img class="img2" src="img/2.jpg" alt="">
-            <img class="img3" src="img/3.jpg" alt="">
-        </div>
-        <div class="buttons">
+    <div class="slider">
+        <div class="slider-container">
             <button class="prev">&larr;Prev</button>
-            <img class="img1 active" src="img/1.jpg" alt="">
-            <img class="img2" src="img/2.jpg" alt="">
-            <img class="img3" src="img/3.jpg" alt="">
+            <div class="slider-slides">
+                <img class="img1 active" src="img/car.jpg" alt="">
+                <img class="img2" src="img/plane.jpg" alt="">
+                <img class="img3" src="img/ship.jpg" alt="">
+                <img class="img4" src="img/train.jpg" alt="">
+            </div>
             <button class="next">Next&rarr;</button>
+        </div>
+        <div class="slider-preview">
+            <img class="img1 active" src="img/car.jpg" alt="">
+            <img class="img2" src="img/plane.jpg" alt="">
+            <img class="img3" src="img/ship.jpg" alt="">
+            <img class="img4" src="img/train.jpg" alt="">
         </div>
     </div>
 </body>
